--- a/app/src/main/res/layout/activity_tarea12.xml
+++ b/app/src/main/res/layout/activity_tarea12.xml
@@ -15,8 +15,9 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:text="TextView"
+        android:text="Data no recibida, intentalo nuevamente por favor."
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
